Update global.css and index.html styles

--- a/index.html
+++ b/index.html
@@ -63,13 +63,19 @@
         <div class="popup">
             <div class="popupheader">
                 <h2>About the theme</h2>
-                <a class="close" href="#">&times;</a>
+                <a class="close" href="#"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                    </svg>
+                </a>
             </div>
             <div class="content">
                 <div>
-                <h1>TEKKEN</h1>
-               
-                <p>Tekken is a Japanese fighting game franchise that includes film and print adaptations. The name translates to "Iron Fist".  </p></div>
+                    <h1>TEKKEN</h1>
+
+                    <p>Tekken is a Japanese fighting game franchise that includes film and print adaptations. The name
+                        translates to "Iron Fist". </p>
+                </div>
             </div>
         </div>
     </div>
@@ -86,7 +92,7 @@
         </div>
     </main>
     <!--message section-->
-    <section>
+    <section id="message">
         <div class="message-text-section">
             <div>
                 <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
@@ -1482,7 +1488,7 @@
         </footer>
     </div>
     <script src="js/main.js"></script>
-    
+
     <!--tailwind  -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!--trig.js import track the scroll -->
