Remove unnecessary code and update navigation links

--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@
             <li><a href="#video">Video</a></li>
             <li><a href="#img">Images</a></li>
             <li><a href="#character">Characters</a></li>
-            <li><a href="#message">Message</a></li>
             <li>
                 <a href="#popup1">
                     <button
                         class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">About
                         the theme
+
+                    </button></a>
+            </li>
+            <li>
+                <a href="#popup2">
+                    <button
+                        class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">About
+                        the Pixonoids
 
                     </button></a>
             </li>
@@ -58,27 +65,6 @@
 
 
 
-    <!--CSS MAIN.CSS-->
-    <div id="popup1" class="overlay">
-        <div class="popup">
-            <div class="popupheader">
-                <h2>About the theme</h2>
-                <a class="close" href="#"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-                    </svg>
-                </a>
-            </div>
-            <div class="content">
-                <div>
-                    <h1>TEKKEN</h1>
-
-                    <p>Tekken is a Japanese fighting game franchise that includes film and print adaptations. The name
-                        translates to "Iron Fist". </p>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
@@ -91,37 +77,8 @@
             <a href="#popup1" class=" flex justify-center"><button class="btnparent"><button class="popupbtn">POPUP</button></button></a>-->
         </div>
     </main>
-    <!--message section-->
-    <section id="message">
-        <div class="message-text-section">
-            <div>
-                <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                        class="inline-block w-8 h-8 text-gray-500 mb-8" viewBox="0 0 975.036 975.036">
-                        <path
-                            d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z">
-                        </path>
-                    </svg>
-                    <p class="leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Aliquam
-                        earum molestiae dolorum ab. Molestias maxime at nam facilis necessitatibus explicabo
-                        commodi
-                        officia ipsum aut? Minus.</p>
-                </div>
-            </div>
-
-
-        </div>
-
-        <div class="custom-shape-divider-top-1704987424">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                preserveAspectRatio="none">
-                <path
-                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                    class="shape-fill"></path>
-            </svg>
-        </div>
-    </section>
+    
+ 
     <!--image section -->
     <div class=" w-full imgbox" id="img">
         <div class="imgelement w-full h-full"></div>
@@ -1487,6 +1444,59 @@
             </div>
         </footer>
     </div>
+
+    <!--CSS MAIN.CSS pop up-->
+    <div id="popup1" class="overlay">
+        <div class="popup" id="themepopup">
+            <div class="popupheader">
+                <h2>About the theme</h2>
+                <a class="close" href="#"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                    </svg>
+                </a>
+            </div>
+            <div class="content">
+                <div>
+                    <h1>TEKKEN</h1>
+
+                    <p>Tekken is a Japanese fighting game franchise that includes film and print adaptations. The name
+                        translates to "Iron Fist". </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="popup2" class="overlay">
+        <div class="popup" id="pixoinfopopup">
+            <div class="popupheader">
+                <h2>About the theme</h2>
+                <a class="close" href="#"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                    </svg>
+                </a>
+            </div>
+            <div class="content">
+                <div>
+                    <h1>PIXONOIDS</h1>
+
+                    <p>The Official Photography , Animation , Graphic Designing , Video Editing and Web Development Club
+                        of National Institute Of Technology Hamirpur </p>
+                    <p>
+                        "Art is that form of unique expression which traverses the boundaries of inner aspirations and
+                        ethereal world."
+                        <br>
+                        From rustling leaves to pastel hues, bustling crowds to silent rooms, we at PIXONOIDS capture it
+                        all. PIXONOIDS is the core club of NIT-H, which is responsible for documentation of college
+                        events and fests, designing posters, making short films, and conceiving the official websites
+                        for our college fests.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--CSS MAIN.CSS pop up-->
+    <!--JS import-->
     <script src="js/main.js"></script>
 
     <!--tailwind  -->
