Refactor index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="./styles/cards.css">
     <link rel="stylesheet" href="./styles/svg.css">
     <link rel="stylesheet" href="global.css">
-
-
 </head>
 
 <body>
@@ -73,24 +71,25 @@
         <div class="main h-screen">
             <h1 class="pixotitle">PIXONOIDS</h1>
             <h1 class="farewelltext">Farewell-2023</h1>
-            <!--
-            <a href="#popup1" class=" flex justify-center"><button class="btnparent"><button class="popupbtn">POPUP</button></button></a>-->
+            <div class="flex justify-center pt-11">
+            <a href="#video" class="  ">
+                <button
+                    class="inline-flex items-center bg-gray-800 border-0 py-2 px-3 focus:outline-none hover:bg-white hover:text-black rounded text-base mt-4 md:mt-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 13.5 12 21m0 0-7.5-7.5M12 21V3" />
+                    </svg>
+
+                </button></a></div>
         </div>
     </main>
 
 
     <!--image section -->
-    <div class=" w-full imgbox" id="img">
-        <div class="imgelement w-full h-full"></div>
-
-
-
-    </div>
-
+    <div class=" w-full imgbox" id="img"> <div class="imgelement w-full h-full"></div></div>
     <!-- video Section -->
-    <section class="video-section " id="video">
-
-    </section>
+    <section class="video-section " id="video"></section>
+    <!--main section-->
     <a href="#main">
         <div class="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -100,6 +99,7 @@
 
         </div>
     </a>
+    <!--character section-->
     <div id="character">
 
 
