--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <a href="#video" class="  ">
                 <button
                     class="inline-flex items-center bg-gray-800 border-0 py-2 px-3 focus:outline-none hover:bg-white hover:text-black rounded text-base mt-4 md:mt-0">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 13.5 12 21m0 0-7.5-7.5M12 21V3" />
-                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                      </svg>
+                      
 
                 </button></a></div>
         </div>
