Update navbar and popup styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar">
+    <nav class="navbar" >
         <div class="navbar-logo"><img src="./assets/logo/Pixonoids - Material UI.png"></div>
         <ul class="navbar-links">
             <li><a href="#video">Video</a></li>
@@ -27,7 +27,7 @@
                 <a href="#popup1">
                     <button
                         class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">About
-                        the theme
+                         theme
 
                     </button></a>
             </li>
@@ -35,7 +35,7 @@
                 <a href="#popup2">
                     <button
                         class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">About
-                        the Pixonoids
+                         Pixonoids
 
                     </button></a>
             </li>
@@ -67,10 +67,11 @@
 
 
 
-    <main id="main">
+    <main id="main" >
         <div class="main h-screen">
             <h1 class="pixotitle">PIXONOIDS</h1>
             <h1 class="farewelltext">Farewell-2023</h1>
+            <div class="flex justify-center"><span class="names">We will miss you </span></div>
             <div class="flex justify-center pt-11">
             <a href="#video" class="  ">
                 <button
